--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "stdlib.h": "c",
     "stdio.h": "c",
     "complex.h": "c",
-    "router_manager.h": "c"
+    "router_manager.h": "c",
+    "string.h": "c"
   }
 }
