--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "stdio.h": "c",
     "complex.h": "c",
     "router_manager.h": "c",
-    "string.h": "c"
+    "string.h": "c",
+    "typeinfo": "c"
   }
 }
