changed some code structure, updated names and added graceful server shutdown

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "complex.h": "c",
     "router_manager.h": "c",
     "string.h": "c",
-    "typeinfo": "c"
+    "typeinfo": "c",
+    "request_manager.h": "c"
   }
 }
